# my-nas

./: .gitignore  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml  cleanup.yml  release.yml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  chromaprint_jni.cpp
android/app/src/main/cpp/include/: chromaprint.h
assets/animations/: book_loading.json  loading_dots.json  music_loading.json  video_loading.json
docs/: ANALYSIS.md  ARCHITECTURE.md  TASKS.md  android-dynamic-island.md  book-tts-implementation.md  carplay-android-auto.md  desktop-mobile-adaptation.md  desktop_lyric_refactor_plan.md  ebook-implementation.md  ios-dynamic-island-fix.md  ios-dynamic-island-research.md  ios26-bottom-sheet-adaptation.md  ios26-liquid-glass-adaptation.md  ios26-liquid-glass-design.md  ios26-liquid-glass-implementation.md  legado-integration.md  liquid-glass-implementation.md  liquid-glass-nav-bar-refactor-notes.md  live-streaming-implementation.md  scrape-sources.md
docs/design/: account-activation-system.md  media-server-integration.md  music-player-mediakit-migration.md
docs/testing/: incremental-sync-test-plan.md  (+1 more)
ios/: Gemfile  Podfile
lib/: main.dart
linux/: CMakeLists.txt
macos/: Podfile
scripts/: build.ps1  build.sh  capture_ios_log.sh  clean_run_macos.sh  download_ffmpeg.ps1  download_ffmpeg.sh  fix_ios_build.sh
shaders/: liquid_glass.frag  page_curl.frag
test/: widget_test.dart
windows/: .gitignore  CMakeLists.txt
(+764 files in other folders)
